cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../dataset/june2020_dataset_copy/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/WriterFile.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ fileWriter $$ java.io.FileWriter $$ possible exceptional exit due to fileWriter.write(source) with exception type java.io.IOException $$ ( 317, 350 ) $$ @MustCall method close may not have been invoked on fileWriter or any of its aliases.
			fileWriter = new FileWriter(file);
			           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to fileWriter.write(source) with exception type java.io.IOException
../dataset/june2020_dataset_copy/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/Reader.java:15: error: (required.method.not.called) $$ 4 $$ method close $$ fileR $$ java.io.FileReader $$ possible exceptional exit due to fileR.read(buffer) with exception type java.io.IOException $$ ( 219, 255 ) $$ @MustCall method close may not have been invoked on fileR or any of its aliases.
			fileR = new java.io.FileReader(file);
			      ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to fileR.read(buffer) with exception type java.io.IOException
2 errors
